--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -95,6 +95,79 @@
     border-radius: 7px !important;
 }
 
+/* PROPOSAL CSSS */
+.proposal-file-con{
+  border: 1px dashed var(--bs-secondary-border-subtle);
+  border-radius: 5px;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.proposal-file-card{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  position: relative;
+}
+
+.proposal-file-card .checkbox-wrapper{
+  position: absolute;
+  top: 8px;
+  left: 13px;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+.proposal-file-card .checkbox-wrapper small{
+  font-weight: 600;
+  color: #3D4953;
+  font-size: .75em;
+}
+.proposal-file-card-body{
+  cursor: pointer;
+}
+.proposal-file-card-header{
+  position: absolute;
+  top: 45px;
+  left: 7px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.proposal-file-card-header .custom-badge{
+  background: rgba(145,156,255,0.2);
+  -webkit-backdrop-filter: blur(13px);
+  backdrop-filter: blur(13px);
+  border: 1px solid rgba(150, 212, 199,0.3);
+  padding: 3px 5px;
+  border-radius: 5px;
+  font-size: .8em;
+  color: var(--bs-white);
+}
+.proposal-file-img{
+  height: 125px;
+  width: 125px;
+  /* border: 1px dashed red; */
+}
+.proposal-file-img img{
+  height: 100%;
+  width: 100%;
+}
+.proposal-file-footer button{
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  border: 0;
+}
+.proposal-file-footer button{
+  font-size: .6em;
+}
+.proposal-file-footer button i{
+  font-size: 1em;
+}
+
+
 
 
 /* RESPONSICE MEDIA QUERY */
