Modified view OOB, export OOB, submit proposal, edit proposal for both proponent and secretary

--- a/public/assets/css/table.css
+++ b/public/assets/css/table.css
@@ -18,7 +18,7 @@
 }
 .custom_tab_item:hover{
     color: var(--bs-primary);
-    transition: .5s;
+    /* transition: .5s; */
 }
 .custom_tab_item{
     padding: 20px 25px; 
