--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -70,7 +70,7 @@
   }
   .proponent-con{
     padding: 15px;
-    min-height: 170px !important;
+    min-height: 120px !important;
     /* background-color: var(--bs-body-bg); */
   }
   .proponent-con ul{
@@ -360,7 +360,100 @@ box-shadow: 3px -7.5px 18px -1.5px #ddd;
    opacity: 0.8;
   }
  }
- 
+
+/* CUSTOM FILE UPLOAD DESIGN */
+.drop-area {
+  border: 2px dashed var(--bs-secondary-border-subtle);
+  padding: 20px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 6px;
+  transition: 0.3s;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.upload-text{
+  font-size: 1.1em;
+}
+.drop-area:hover {
+  background-color: #f1f1f1;
+}
+.file-list {
+  list-style: none;
+  padding: 0;
+  margin-top: 10px;
+}
+.file-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 10px 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  background: #fff;
+  position: relative;
+  flex-wrap: wrap;
+}
+.file-item:hover{
+  -webkit-box-shadow: 0 6.5px 17.5px -5.5px #dddddd;
+  -moz-box-shadow: 0 6.5px 17.5px -5.5px #dddddd;
+  box-shadow: 0 6.5px 17.5px -5.5px #dddddd;
+  transition: .3s;
+}
+.file-icon {
+  width: 30px;
+  height: 30px;
+}
+.file-name {
+  flex-grow: 1; 
+  display: flex;
+  flex-direction: column;
+}
+.delete-file-btn{
+  background: none;
+  border: none;
+  color: var(--bs-secondary);
+  cursor: pointer;
+  font-size: 1.4em;
+}
+.progress-circle {
+  width: 35px;
+  height: 35px;
+  min-width: 35px;
+  border-radius: 50%;
+  background: conic-gradient(#fd7e14 0% 0%, #ffffff 0% 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+.progress-circle::before {
+  content: "";
+  width: 25px;
+  height: 25px;
+  background: #ffffff;
+  border-radius: 50%;
+  position: absolute;
+}
+.progress-text {
+  position: absolute;
+  font-size: .6em;
+  font-weight: bold;
+}
+.progress-check{
+  color: var(--bs-success);
+}
+.file-header{
+  color: var(--bs-secondary);
+  display: flex;
+  gap: 7px;
+  align-items: center;
+  display: none;
+}
+
 /* END CUSTOM FILTER LOADER */
 
 /* RESPONSICE MEDIA QUERY */
