--- a/public/assets/css/button.css
+++ b/public/assets/css/button.css
@@ -15,17 +15,20 @@
     font-size: 1em;
 }
 
-.action-btn.primary:hover{
+.action-btn.primary:hover,
+.action-btn.primary.active{
     background-color: var(--bs-primary-bg-subtle);
     color: var(--bs-primary);
     transition: .3s;
 }
-.action-btn.danger:hover{
+.action-btn.danger:hover,
+.action-btn.danger.active{
     background-color: var(--bs-danger-bg-subtle);
     color: var(--bs-danger);
     transition: .3s;
 }
-.action-btn.success:hover{
+.action-btn.success:hover,
+.action-btn.success.active{
     background-color: var(--bs-success-bg-subtle);
     color: var(--bs-success);
     transition: .3s;
@@ -64,4 +67,25 @@
 .action-btn:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
+}
+
+
+.stick-buttons-group{
+    position: fixed;
+    top: 50%;
+    right: 30px;
+    background: rgba(238,236,236,0.2);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    border: 1px solid rgba(219, 219, 219, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.7);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1000;
+}
+.stick-buttons-group div{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
