--- a/public/assets/css/table.css
+++ b/public/assets/css/table.css
@@ -44,3 +44,14 @@
     font-weight: 500 !important;
     padding: 15px 10px !important;
 }
+
+/* CREATE GROUP IN ORDER BUSSINESS CSS*/
+.selected-row {
+    background-color: var(--bs-primary-bg-subtle) !important;
+    border: 1px solid var(--bs-white) !important;
+    border-left: 4px solid var(--bs-primary) !important;
+}
+
+.tr-group{
+    background-color: var(--bs-secondary-bg-subtle);
+}
