--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -385,7 +385,78 @@ box-shadow: 3px -7.5px 18px -1.5px #ddd;
   display: none;
 }
 
+/* LOGIN CSS */
+.auth-card{
+  background: var(--bs-white);
+  /* background: rgba(255,255,255,0.6);
+  -webkit-backdrop-filter: blur(9px);
+  backdrop-filter: blur(9px);
+  border: 1px solid rgba(255, 255, 255, 0.5); */
+  
+  -webkit-box-shadow: 0 13px 21px 1.5px #cfcede;
+  -moz-box-shadow: 0 13px 21px 1.5px #cfcede;
+  box-shadow: 0 13px 21px 1.5px #cfcede;
+  display: flex;
+}
+.auth-form-con{
+  padding: 40px;
+  width: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.auth-bg-con{
+  width: 500px;
+  height: auto;
+}
+.auth-bg-con img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.auth-form-content{
+  max-width: 400px;
+  /* border: 1px dashed red; */
+}
+.logo-wrapper{
+  display: flex;
+  flex-direction: column;
+  gap: 0 !important;
+  margin-bottom: 100px;
+}
+.logo-wrapper h2{
+  font-size: .9em;
+  font-family: "Boldonse", system-ui;
+  font-weight: 600;
+  font-style: normal;
+  color: var(--bs-primary);
+  margin: 0;
+}
+.logo-wrapper span{
+  font-size: .8em;
+  color: var(--bs-primary);
+  margin: 0;
+}
+.auth-header h1{
+  font-size: 1.8em;
+  color: var(--bs-primary);
+  font-family: "Boldonse", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+.auth-header{
+  margin-bottom: 50px;
+}
+
+
 /* RESPONSICE MEDIA QUERY */
+@media only screen and (max-width: 1000px) {
+  .auth-form-con,
+  .auth-bg-con{
+    width: 350px;
+  }
+
+}
 @media only screen and (max-width: 700px) {
   .navbar-nav-text {
     display: none;
@@ -396,6 +467,12 @@ box-shadow: 3px -7.5px 18px -1.5px #ddd;
     border-radius: 6px;
     overflow: hidden;
   }
+  .auth-bg-con{
+    display: none;
+  }
+  .auth-form-con{
+    width: 450px;
+  }
 }
 @media only screen and (max-width: 600px) {
   .meeting-sub-details {
@@ -405,5 +482,24 @@ box-shadow: 3px -7.5px 18px -1.5px #ddd;
 @media only screen and (max-width: 500px) {
   nav .user-info {
     display: none;
+  }
+
+  .auth-header h1{
+    font-size: 1.5em;
+  }
+  .auth-form-con{
+    width: auto;
+    max-width: 400px;
+  }
+  .logo-wrapper{
+    margin-bottom: 70px;
+  }
+  .auth-card{
+    margin: 10px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .auth-header h1{
+    font-size: 1.2em;
   }
 }
