--- a/public/assets/css/table.css
+++ b/public/assets/css/table.css
@@ -36,24 +36,30 @@
 }
 
 .custom-tbl-header{
-    background-color: #9B9DFF;
+    /* background-color: #F2F3F7; */
+    /* background-color: var(--bs-primary); */
     /* color: var(--bs-white); */
+    border: none !important;
 }
 
 .custom-tbl-header th,
 .custom-tbl-header tr{
-    color: var(--bs-white) !important;
+    /* color: var(--bs-primary) !important; */
+     /* color: var(--bs-white) !important; */
 }
+/* .custom-tbl-header th{
+    padding: 15px 10px !important;
+} */
 tr{
     border-bottom: 1px solid #e8e8e8 ;
 }
-
-/* TD AND TH CUSTOM CSS */
-
-.table-striped td{
-    font-weight: 500 !important;
-    padding: 15px 10px !important;
+td{
+    color: #646E78 !important;
+    font-weight: 400 !important;
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
 }
+
 
 /* CREATE GROUP IN ORDER BUSSINESS CSS*/
 .selected-row {
@@ -62,6 +68,6 @@ tr{
     border-left: 4px solid var(--bs-primary) !important;
 }
 
-.tr-group{
+/* .tr-group{
     background-color: var(--bs-secondary-bg-subtle);
-}
+} */
