--- a/public/assets/css/cards.css
+++ b/public/assets/css/cards.css
@@ -8,7 +8,7 @@
 }
 
 /* CUSTOM CARD CSS */
-.card{
+.card, nav{
     border-radius: 5px !important;
-    box-shadow:  0 2px 14px rgba(38, 60, 85, 0.16);
+    box-shadow: -8px 12px 18px 0 rgba(25, 42, 70, 0.13) !important;
 }
