--- a/public/assets/css/button.css
+++ b/public/assets/css/button.css
@@ -18,13 +18,13 @@
 .action-btn.primary:hover,
 .action-btn.primary.active{
     background-color: var(--bs-primary-bg-subtle);
-    color: var(--bs-primary);
+    color: var(--bs-primary) !important;
     transition: .3s;
 }
 .action-btn.danger:hover,
 .action-btn.danger.active{
     background-color: var(--bs-danger-bg-subtle);
-    color: var(--bs-danger);
+    color: var(--bs-danger) !important;
     transition: .3s;
 }
 .action-btn.success:hover,
@@ -36,7 +36,7 @@
 .action-btn.warning:hover,
 .action-btn.warning.active{
     background-color: var(--bs-warning-bg-subtle);
-    color: var(--bs-warning);
+    color: var(--bs-warning) !important;
     transition: .3s;
 }
 
