--- a/public/assets/css/button.css
+++ b/public/assets/css/button.css
@@ -142,3 +142,19 @@
     background-color: var(--bs-info) !important;
     color: var(--bs-white) !important;
 }
+.custom-button {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #1d4ed8; /* Blue text */
+    background-color: white;
+    border: 2px solid #1d4ed8; /* Blue border */
+    border-radius: 6px;
+    text-decoration: none;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    font-weight: bold; 
+}
+
+.custom-button:hover {
+    background-color: #1d4ed8; /* Blue background */
+    color: white;
+}
