--- a/public/assets/css/pages/dashboard.css
+++ b/public/assets/css/pages/dashboard.css
@@ -1,19 +1,21 @@
 .dashboard-bg-con{
     position: relative;
+    overflow: hidden !important;
+    border-radius: 5px;
 }
 .dashboard-bg{
     position: relative;
-    height: 300px;
+    height: 200px;
+    overflow: hidden !important;
 }
 .dashboard-bg::before{
     position: absolute;
-    height: 300px;
+    height: 200px;
     width: 100%;
     content: "";
     background: #ffffff;
     background: -webkit-linear-gradient(0deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
     background: linear-gradient(0deg, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
-    
 }
 .dashboard-bg img{
     height: 100%;
@@ -58,4 +60,3 @@
     margin: 0;
     font-size: 1.2em;
 }
-  
